Convert IMAGE_NAME to lowercase in fuzz-action.yml

--- a/.github/workflows/fuzz-action.yml
+++ b/.github/workflows/fuzz-action.yml
@@ -5,7 +5,7 @@ jobs:
   build-fuzz-docker:
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: ${{ github.repository }}
+      IMAGE_NAME: ${{ toLower(github.repository) }}
       COMMIT_SHA: ${{ github.sha }}
     steps:
       - name: Checkout repository
