Update IMAGE_NAME in fuzz-action.yml

--- a/.github/workflows/fuzz-action.yml
+++ b/.github/workflows/fuzz-action.yml
@@ -5,7 +5,7 @@ jobs:
   build-fuzz-docker:
     runs-on: ubuntu-latest
     env:
-      IMAGE_NAME: imcvt
+      IMAGE_NAME: manoskamarianos/imcvt
       COMMIT_SHA: ${{ github.sha }}
     steps:
       - name: Checkout repository
